# fast-ion-isotropization

./: .flake8  .gitignore  README.md  compile.py  plot_distribution.py  plot_distribution_poster.py  plot_distribution_qps_brst.py  plot_flapping.py  plot_tau.py  plot_tau_poster.py  pyproject.toml  requirements.txt  supplemental_material.ipynb
IonAniso/: setup.py
IonAniso/ionaniso/: __init__.py  load.py  plot.py  utils.py
data/: mms_bbfsdb_brst_2017-2021.csv  mms_bbfsdb_brst_2017-2021.nc
