[project]
name = "ionaniso"
description = "Fast Ion Isotropization by Current Sheet Scattering in Magnetic Reconnection Jets"
readme = "README.md"
authors = [{ name = "Louis RICHARD", email = "louir@irfu.se" }]
license = { file = "LICENSE.txt" }
dependencies = [
    "matplotlib>=3.5.2",
    "numpy>=1.20.3,<1.25.0",
    "pandas>=1.3.4",
    "pyrfu>=2.4.11",
    "scipy>=1.7.3",
    "xarray>=0.20.1",
]

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/'''

[tool.isort]
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
disable = """
    missing-function-docstring,
    missing-module-docstring,
    too-many-arguments,
    too-many-locals,
    too-many-lines,
    too-many-statements,
    too-many-branches,
    too-many-nested-blocks,
    invalid-name,
    duplicate-code,
    not-an-iterable,
    fixme,
    bare-except
"""

ignored-modules = "scipy"